--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "timed-role-assign",
+  "name": "discord-condemner",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "distr/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc",
